<resources>
    <string name="app_name">Visualize PDF</string>
    <string name="open_pdf">Abrir PDF</string>
    <string name="no_pdf_selected">No se ha seleccionado ningún PDF</string>
    <string name="no_pdf_desc">Selecciona un archivo PDF de tu dispositivo o abre un documento de muestra para comenzar a leer.</string>
    <string name="select_file">Seleccionar Archivo</string>
    <string name="open_sample">Ver Documento de Muestra</string>
    <string name="page_format">Página %1$d de %2$d</string>
    <string name="jump_to_page">Ir a la página</string>
    <string name="enter_page_number">Ingresa un número entre 1 y %1$d</string>
    <string name="go">Ir</string>
    <string name="cancel">Cancelar</string>
    <string name="share">Compartir</string>
    <string name="error_loading_pdf">Error al abrir el archivo PDF. Asegúrate de que el archivo no esté protegido con contraseña o dañado.</string>
    <string name="error_password">Este PDF está protegido con contraseña. Introdúcela para abrirlo.</string>
    <string name="error_corrupt">El archivo parece dañado o tiene un formato no compatible.</string>
    <string name="error_too_large">El documento es demasiado grande para este dispositivo.</string>
    <string name="error_oom">Memoria insuficiente para renderizar este PDF.</string>
    <string name="password_hint">Contraseña</string>
    <string name="open">Abrir</string>
    <string name="sample_pdf_title">Guía de Inicio Rápido</string>
    <string name="zoom_in">Aumentar Zoom</string>
    <string name="zoom_out">Disminuir Zoom</string>
    <string name="reset_zoom">Restablecer Zoom</string>
</resources>